--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Chopin Chronical </title>
+    <title> I Amsterdam. </title>
     <link rel="stylesheet" href="https://github.com/necolas/normalize.css.git">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Padauk|Tajawal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -112,7 +112,7 @@
             <img class="giethoorn" src="giethoorn.JPG" alt="Giethoorn">
             <div class="wrap">
                 <!--   <div class="wrap2"> -->
-                <blockquote class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis fringilla dolor, a sollicitudin turpis posuere elementum.</blockquote>
+                <blockquote class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis fringilla dolor, a sollicitudin turpis posuere elementum."</blockquote>
                 <p class="one">Spring has sprung! In this tremendous blog article we're going to cover some points. This is where I'm telling you that what I'm going to tell you. Then I'm going to tell you those things. Then, because your special, and I'm to tell you what I told you.</p>
                 <p class="two">That quote was from the famous latin composer... nope, just kidding. Emmet generated it because that's a feature that it has. In the next section, we're really going to get into the meat of this blog post. </p>
                 <p class="three">Nunc ornare ante id sapien ullamcorper sollicitudin. Vestibulum vel odio sapien. Nam quis est maximus, cursus nibh at, dictum lorem. Donec vestibulum quam quis lorem egestas semper. Nullam et congue libero, a ultricies urna. Vivamus sed efficitur nisl. Fusce dapibus, lectus vel laoreet mattis, quam tellus fermentum diam, et luctus sem tortor in lorem. Nunc interdum ipsum ligula. Pellentesque sed diam erat.</p>
@@ -120,12 +120,14 @@
                 <p class="five">Vivamus mollis fringilla dolor, a sollicitudin turpis posuere elementum. Quisque risus dolor, rhoncus sed imperdiet vel, tristique ac nisi. Sed dapibus aliquam nibh, at posuere dolor lobortis ac. Nam quis urna ac magna facilisis blandit. Maecenas vel arcu nec ipsum venenatis malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam semper ac sem at interdum. Ut massa est, egestas id sem at, commodo consequat velit.</p>
                 <p class="six">In a pellentesque eros. Morbi elementum venenatis est quis cursus. Nunc vitae mi maximus, volutpat enim nec, ultricies libero. Donec pharetra dui arcu, vel sagittis dolor scelerisque nec!</p>
                 <!--    </div> -->
+                <footer><a href="https://katechoo.github.io/" target="_blank">
+                    2020 &copy;Ｋ All Rights Reserved.
+                </a></footer>
             </div>
+            <!-- <footer><a href="https://katechoo.github.io/" target="_blank">
+                2020 &copy;Ｋ All Rights Reserved.
+            </a></footer> -->
         </section>
-
-        <footer><a href="https://katechoo.github.io/" target="_blank">
-        2020 &copy;Ｋ All Rights Reserved.
-        </a></footer>
         <script src="main.js"></script>    
     </body>
   </html>
