--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> I Amsterdam. </title>
+    <title> I amsterdam. </title>
     <link rel="stylesheet" href="https://github.com/necolas/normalize.css.git">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Padauk|Tajawal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
