--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    Section 2
 =====================-->
         <section id="section2" class="section__tab-group">
-            <h1 class="section__title">Useful Amsterdam Blog</h1>
+            <h1 class="section__title">Useful Amsterdam Blogs</h1>
             <div class="section__content">
                 <p>Blogs and contents are recommanded by <a href="https://www.iamsterdam.com/en/see-and-do/whats-on/i-amsterdam-magazine">I amsterdam Magazine Spring 2020.</a></p>
             </div>
@@ -107,8 +107,9 @@
                         </div>
                 </div>
             </div>
+            Design:2020 &copy;Ｋ
             <a class="section2__footer" href="https://www.iamsterdam.com/en/see-and-do/whats-on/i-amsterdam-magazine" target="_blank">
-                 &copy;I amsterdam Magazine Spring 2020 
+                 &copy;I amsterdam Magazine Spring 2020
             </a>
         </section>
 <!--======================
@@ -125,7 +126,7 @@
             <div class="wrap">
                 <!--   <div class="wrap2"> -->
                 <blockquote class="quote">"Giethoorn is a heaven on Earth."</blockquote>
-                <p class="one">The Netherlands is a country with canals, bikes, and Schiphol (one of the busiest airport in the world). Yes, it's all covered. It means Giethoorn is just a ticket away. <br><a href="#">How to get to Giethoorn.</a></p>
+                <p class="one"><span class="firstletter">T</span>he Netherlands is a country with canals, bikes, and Schiphol (one of the busiest airports in the world). Yes, it's all covered. It means Giethoorn is just a ticket away. <br><a href="#">How to get to Giethoorn.</a></p>
                 <!-- <img class="giethouse" src="giethouse.JPG" alt="Giethoorn"> -->
                 <img class="gietriver" src="gietriver.JPG" alt="Giethoorn">
                 <!-- <p class="two"></p> -->
