--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-175042112-2');
     </script>       
     <meta charset="utf-8">
-    <title> I amsterdam. </title>
+    <title> Amsterdam </title>
     <link rel="stylesheet" href="https://github.com/necolas/normalize.css.git">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Padauk|Tajawal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -25,11 +25,12 @@
             <!--實際在寫時把header放在section1後比較好寫-->
             <a href="#" onClick="window.location.reload();">
             <h1 id="home" class="amsterdam">
-                <span>I</span> <span id="am">am</span>sterdam.
+                <!-- <span>I</span>  -->
+                A<span id="am">ms</span>terdam<span>.</span>
             </h1>
             </a>
             <a class="header__footer" href="#" target="">
-                2020 Ｋ
+                Ｋ
             </a>
         </header>
         <section class="section__nav">
@@ -43,7 +44,7 @@
             <nav class="nav watermark">
                 <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="#home" class="nav__link">I amsterdam.</a>
+                    <a href="#home" class="nav__link">Amsterdam.</a>
                 </li>
                 <li class="nav__item">
                     <a href="#section2" class="nav__link">Blogs</a>            
@@ -140,6 +141,9 @@
                     2020 &copy;Ｋ
                 </a></footer>
             </div>
+            <!-- <footer><a href="https://katechoo.github.io/" target="_blank">
+                2020 &copy;Ｋ All Rights Reserved.
+            </a></footer> -->
         </section>
         <script src="main.js"></script>    
     </body>
