link to aircrew

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-175042112-2');
     </script>       
     <meta charset="utf-8">
-    <title> Amsterdam </title>
+    <title> Visit Amsterdam </title>
     <link rel="stylesheet" href="https://github.com/necolas/normalize.css.git">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Padauk|Tajawal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -120,10 +120,10 @@
             <h1 class="daytrip__title">A Day Trip To Giethoorn</h1>
             <div class="flex">
             <h3 class="daytrip__date">August 9th, 2020</h3>
-            <h3 class="daytrip__name"><a class="section3__footer" href="https://kchoo.com/" target="_blank">K Choo</a></h3>
+            <h3 class="daytrip__name"><a class="section3__footer" href="https://aircrew.netlify.app" target="_blank">K Choo</a></h3>
             </div>
             <img class="giethoorn" src="giethoorn.JPG" alt="Giethoorn">
-            <span class="pCredit">Picture Credit: K Choo</span>
+            <span class="pCredit">Picture Credit: K </span>
             <div class="wrap">
                 <!--   <div class="wrap2"> -->
                 <blockquote class="quote">"Giethoorn is a heaven on Earth."</blockquote>
@@ -137,7 +137,7 @@
                 <img class="gietdog" src="gietdog.JPG" alt="Giethoorn">
                 <span class="gietdog">It's a dog house!!!</span>
                 <!--    </div> -->
-                <footer><a href="https://kchoo.com/" target="_blank">
+                <footer><a href="https://aircrew.netlify.app" target="_blank">
                     2020 &copy;Ｋ
                 </a></footer>
             </div>
