--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 2020 &copy;Ｋ All Rights Reserved.
             </a></footer> -->
         </section>
+        <script> </script>
         <script src="main.js"></script>    
     </body>
   </html>
